# mdx-server

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml  run_server.py
.github/: README.md
.github/workflows/: docker.yml  release.yml  test.yml
mdx_server/: __init__.py  config.py  file_util.py  mdx_server.py  multi_dict_manager.py
src/mdx_server/: README.md  config.json  config.py  mdict_query.py  mdx_server.py  mdx_util.py  readmdict.py
